--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,89 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #eaeaea;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.container {
+  max-width: 1110px;
+  margin: auto;
+}
+
+.for-other-pages {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.phone {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 17px;
+  text-decoration: none;
+  color: #000000;
+  text-decoration: none;
+}
+
+@media (min-width: 992px) {
+  .like-icon:hover, 
+  .shorting-cart-icon:hover,
+  .vk-icon:hover,
+  .tg-icon:hover,
+  .whatsapp-icon:hover {
+    stroke: #ffa542;
+    fill: #ffa542;
+    transform: translateY(-4px);
+  }
+
+  .like-icon:hover + .count,
+  .shorting-cart-icon:hover + .count-shorting-cart {
+    transform: translateY(-4px);
+  }
+
+
+  .languages-icon:hover {
+    stroke: #ffa542;
+    transform: translateY(-4px);
+    cursor: pointer;
+  }
+
+  .delete-icon:hover {
+    transform: translateY(-4px);
+    cursor: pointer;
+  }
+
+  .btn-next:hover, 
+  .btn-prev:hover {
+    transform: translateY(-4px);
+    cursor: pointer;
+  }
+
+  .go-to-checkout:hover {
+    background-color: #ffa542;
+    color: #1C1C27;
+    transition: 1.5s;
+  }
+
+  .star-icon:hover {
+    transform: rotateY(360deg);
+    transition: 2s;
+    cursor: pointer;
+  }
+
+  .btn-buy:hover,
+  .list-link:hover,
+  .languages-link:hover,
+  .phone:hover {
+    color: #ffa542;
+    text-shadow: 2px 2px 5px #ffa542;
+  }
 }
